какой-то кривой фронт

--- a/front/src/app/pages/report-edit/report-edit.component.html
+++ b/front/src/app/pages/report-edit/report-edit.component.html
@@ -1,40 +1,38 @@
-<div> 
-  <div> 
-    <label  class=" col-form-label m-1">Название</label> 
-    <input #name class="form-control  w-25 bg-light text-dark" value="{{report?.name}}" type="text"> 
-  </div>
-  <div> 
-    <label  class=" col-form-label m-1">Версия</label> 
-    <input disabled class="form-control  w-25 bg-light text-dark" value="{{report?.version}}" type="number"> 
-  </div>
-  <div>
-    <table> 
-      <thead> 
-      <tr> 
-        <th scope="col">Параметры</th> 
-      </tr> 
-      </thead> 
-      <tbody> 
-      <tr *ngFor="let value of report?.values"> 
-        <td>
-          <label  class=" col-form-label m-1">Название параметра</label> 
-          <input class="form-control  w-25 bg-light text-dark" value="{{value?.name}}" type="text"> 
-        </td>
-        <td>
-          <label  class=" col-form-label m-1">Значения параметра</label> 
-          <input class="form-control  w-25 bg-light text-dark" value="{{value?.value}}" type="text"> 
-        </td> 
-      </tr> 
-      </tbody> 
-    </table> 
-  </div>
-  <button type="button" (click)="save(name.value)" class="btn btn-warning "> 
-    Сохранить 
-  </button> 
-  <button type="button" (click)="delete()" *ngIf="reportId" class="btn btn-warning m-1"> 
-    Удалить 
-  </button>
-  <button type="button" (click)="addValue()" class="btn btn-warning "> 
-    Добавить значение 
-  </button> 
+<div>
+  <label  class=" col-form-label m-1">Название</label>
+  <input #name class="form-control  w-25 bg-light text-dark" value="{{report?.name}}" type="text">
 </div>
+<div>
+  <label  class=" col-form-label m-1">Версия</label>
+  <input disabled class="form-control  w-25 bg-light text-dark" value="{{report?.version}}" type="number">
+</div>
+<div>
+  <table>
+    <thead>
+    <tr>
+      <th scope="col">Параметры</th>
+    </tr>
+    </thead>
+    <tbody>
+    <tr *ngFor="let value of report?.values">
+      <td>
+        <label  class=" col-form-label m-1">Название параметра</label>
+        <input class="form-control  w-25 bg-light text-dark" value="{{value?.name}}" type="text">
+      </td>
+      <td>
+        <label  class=" col-form-label m-1">Значения параметра</label>
+        <input class="form-control  w-25 bg-light text-dark" value="{{value?.value}}" type="text">
+      </td>
+    </tr>
+    </tbody>
+  </table>
+</div>
+<button type="button" (click)="save(name.value)" class="btn btn-warning ">
+  Сохранить
+</button>
+<button type="button" (click)="delete()" *ngIf="reportId" class="btn btn-warning">
+  Удалить
+</button>
+<button type="button" (click)="addValue()" class="btn btn-warning">
+  Добавить значение
+</button>
