--- a/front/src/app/app.component.html
+++ b/front/src/app/app.component.html
@@ -5,20 +5,22 @@
   </div>
   <ng-template #elseBlock>
     <header> 
-      <nav class="navbar navbar-expand-lg navbar-dark bg-dark" id="navbarNav"> 
+      <nav class="navbar navbar-expand-lg navbar-light bg-light"> 
         <div class="collapse navbar-collapse" > 
-          <ul class="navbar-nav"> 
-            <li class="nav-item"> 
+          <ul class="navbar-nav">
+            <li class="nav-item">
               <a class="nav-link" routerLink="/">Главная</a> 
-            </li> 
+            </li>
+          </ul>
+          <ul class="navbar-nav ms-auto">
             <li class="nav-item"> 
-              <a class="nav-link" routerLink="/reports">Отчеты</a> 
+              <a class="nav-link" routerLink="/users"><i class="fa fa-gear"></i></a> 
             </li> 
-            <li class="nav-item"> 
-              <a class="nav-link " routerLink="/users">Пользователи</a> 
-            </li> 
-          </ul> 
-        </div> 
+            <li class="nav-item">
+              <a style="cursor: pointer;" class="nav-link" (click)="logout()"><i class="fa fa-sign-out"></i></a>
+            </li>
+          </ul>
+        </div>
       </nav> 
     </header> 
   </ng-template>
