--- a/front/src/app/pages/home/home.component.html
+++ b/front/src/app/pages/home/home.component.html
@@ -1,3 +1,15 @@
 <div class="container">
-  <h1>Главная страница ремонтируется</h1>
+  <h3>
+    Отчеты
+  </h3>
+  <button type="button">Добавить</button>
+  <collapse [header]="chapter.name" *ngFor="let chapter of reportsChapters" class="row g-4">
+    <div *ngFor="let report of chapter.reports" routerLink="/reports/{{report.id}}" class="col-12 col-md-6 col-lg-4" style="display: ruby">
+        <div class="card h-10">
+          <div class="card-body">
+            {{ report.name }}
+          </div>
+        </div>
+    </div>
+  </collapse>
 </div>
