--- a/front/src/app/pages/users/users.component.html
+++ b/front/src/app/pages/users/users.component.html
@@ -1,20 +1,10 @@
-<div> 
-  <table class="table table-striped table-dark"> 
-    <thead> 
-    <tr> 
-      <th scope="col">Имя пользователя</th> 
-    </tr> 
-    </thead> 
-    <tbody> 
-    <tr  *ngFor="let user of users" routerLink="{{user.id}}"> 
-    <td > 
-      {{user.name}} 
-    </td> 
-    </tr> 
-    </tbody> 
-  </table> 
-  <br> 
-  <a routerLink="add" type="button" class="btn btn-warning m-1" > 
-    Добавить 
-  </a> 
+<div class="col-md-11 d-flex flex-column align-items-center">
+    <div class="list-group">
+      <a *ngFor="let user of users" routerLink="{{user.id}}" class="list-group-item active">
+          <span class="glyphicon glyphicon-star"></span>{{user.name}} 
+      </a>
+    </div>
+    <a routerLink="add" type="button" class="btn btn-primary pull-right" > 
+      Добавить 
+    </a>
 </div>
