--- a/front/src/app/pages/home/home.component.html
+++ b/front/src/app/pages/home/home.component.html
@@ -2,10 +2,10 @@
   <h3>
     Отчеты
   </h3>
-  <button type="button">Добавить</button>
+  <a routerLink="reports/add" class="btn btn-primary mb-3">Добавить</a>
   <collapse [header]="chapter.name" *ngFor="let chapter of reportsChapters" class="row g-4">
-    <div *ngFor="let report of chapter.reports" routerLink="/reports/{{report.id}}" class="col-12 col-md-6 col-lg-4" style="display: ruby">
-        <div class="card h-10">
+    <div *ngFor="let report of chapter.reports" routerLink="/reports/{{report.id}}" class="col-12 col-md-6 col-lg-4" style="display: ruby; cursor: pointer;">
+        <div class="card h-10"  style="margin-top: 0;">
           <div class="card-body">
             {{ report.name }}
           </div>
