--- a/front/src/app/pages/users/users.component.html
+++ b/front/src/app/pages/users/users.component.html
@@ -1,10 +1,10 @@
-<div class="col-md-11 d-flex flex-column align-items-center">
+<div class="col-md-11 d-flex flex-column align-items-center m-2">
     <div class="list-group">
       <a *ngFor="let user of users" routerLink="{{user.id}}" class="list-group-item active">
-          <span class="glyphicon glyphicon-star"></span>{{user.name}} 
+          <span class="glyphicon glyphicon-star"></span>{{user.name}}
       </a>
     </div>
-    <a routerLink="add" type="button" class="btn btn-primary pull-right" > 
-      Добавить 
+    <a routerLink="add" type="button" class="btn btn-primary pull-right m-2">
+      Добавить
     </a>
 </div>
